<resources>
    <string name="app_name">DiyCode</string>
    <string name="action_settings">Settings</string>
    <string name="hint_account">Email/用户名</string>
    <string name="hint_password">密码</string>
    <string name="btn_login">登陆</string>
    <string name="label_regsiter">新用户注册</string>
    <string name="lable_forget_password">忘记密码</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_not_content">暂无内容</string>
    <string name="reply_count">共收到 %s 条回复</string>
    <string name="reply_floor" formatted="false">%s 楼 . %s</string>
    <string name="reply_who" formatted="false">#%s楼 @%s</string>
    <string name="hint_load_complete">加载完啦</string>
    <string name="favorite">favorite</string>
    <string name="collection">collection</string>
    <string name="shared">shared</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="hint_input_title">请输入标题</string>
    <string name="hint_input_content">请输入正文</string>
    <string name="title_me_topics">我的文章</string>
    <string name="title_me_favorites">我的收藏</string>
    <string name="title_me_replies">我的评论</string>
    <string name="title_topics">社区</string>
    <string name="reply">回复</string>
    <string name="publish">发布</string>
    <string name="pulish_paper">发表文章</string>
    <string name="choose_node">选择节点</string>
    <string name="project_node" formatted="false">%s - %s</string>
    <string name="follow">收藏</string>
    <string name="used">我在用</string>
    <string name="sync">同步</string>
    <string name="website">官网</string>
    <string name="github">github</string>
    <string name="download">下载</string>
    <string name="me_menu_topics_count" formatted="false">帖子\n%s</string>
    <string name="me_menu_favorite_count" formatted="false">收藏\n%s</string>
    <string name="me_menu_follow_count" formatted="false">关注\n%s</string>
</resources>
